コメントアウトを追加

--- a/src/main/java/wicket_lecture/LINEClone/TopPage.html
+++ b/src/main/java/wicket_lecture/LINEClone/TopPage.html
@@ -5,7 +5,8 @@
 </head>
 <body>
     <a wicket:id="linkExample">CLICK!</a>
-    <a wicket:id="toFormPage">Form</a>
+    <a wicket:id="toSysOutFormPage">SysOutForm</a>
+    <a wicket:id="toLabelFormPage">LabelForm</a>
     <a wicket:id="toListViewPage">ListView</a>
     <a wicket:id="toBeanListViewPage">ListViewUseBean</a>
 </body>
