htmlにコメントアウト追加

--- a/src/main/java/wicket_lecture/LINEClone/TopPage.html
+++ b/src/main/java/wicket_lecture/LINEClone/TopPage.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
 </head>
 <body>
+    <!-- bodyの中は最初はこれだけ-->
     <a wicket:id="linkExample">CLICK!</a>
+
+    <!-- SysOutPage -->
     <a wicket:id="toSysOutFormPage">SysOutForm</a>
+
+    <!-- LabelFormPage -->
     <a wicket:id="toLabelFormPage">LabelForm</a>
+
+    <!-- ListViewPage -->
     <a wicket:id="toListViewPage">ListView</a>
+
+    <!-- BeanListViewPage -->
     <a wicket:id="toBeanListViewPage">ListViewUseBean</a>
 </body>
 </html>
